--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ out/
 
 docs/configs/tuTestObjects/
 docs/dev/
-LICENSE_HEADER
+LICENSE_PLACEHOLDER
 Pipeline.CI.Jenkinsfile
 Pipeline.DeployGitHub.Jenkinsfile
 Pipeline.InternalRelease.Jenkinsfile
