--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>de.gematik.pki.pkits</groupId>
   <artifactId>pkits-global</artifactId>
-  <version>0.2.0</version>
+  <version>0.2.1</version>
   <packaging>pom</packaging>
   <name>PkiTs</name>
   <description>Uebergreifende Java PKI Testsuite</description>
@@ -42,7 +42,6 @@
     <module>pkits-ocsp-responder</module>
     <module>pkits-tsl-provider</module>
     <module>pkits-tls-client</module>
-    <module>pkits-idp-client</module>
     <module>pkits-testsuite</module>
     <module>pkits-coverage-reports</module>
   </modules>
@@ -422,7 +421,7 @@
               <reflowLongStrings>true</reflowLongStrings>
             </googleJavaFormat>
             <licenseHeader>
-              <file>LICENSE_HEADER</file>
+              <file>LICENSE_PLACEHOLDER</file>
             </licenseHeader>
           </java>
           <groovy>
@@ -440,14 +439,6 @@
             </excludes>
           </markdown>
         </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <phase>validate</phase>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
