--- a/pkits-testsuite/pom.xml
+++ b/pkits-testsuite/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>de.gematik.pki.pkits</groupId>
     <artifactId>pki-testsuite</artifactId>
-    <version>2.2.0</version>
+    <version>2.3.0</version>
   </parent>
 
   <artifactId>pkits-testsuite</artifactId>
-  <version>2.2.0</version>
+  <version>2.3.0</version>
   <name>PKI Test Suite</name>
   <description>PKI test suite</description>
 
@@ -26,11 +26,11 @@
     <testReportDirectory>${project.basedir}/../out/testreport</testReportDirectory>
 
     <!-- dependencies -->
-    <version.apache.sshd>2.10.0</version.apache.sshd>
-    <version.itextpdf>5.5.13.3</version.itextpdf>
-    <version.itextpdf.html2pdf>5.0.1</version.itextpdf.html2pdf>
+    <version.commons-lang3>3.13.0</version.commons-lang3>
+    <version.apache.sshd>2.11.0</version.apache.sshd>
+    <version.itextpdf.html2pdf>5.0.2</version.itextpdf.html2pdf>
     <version.jaxb-runtime>4.0.1</version.jaxb-runtime>
-    <version.mockito>5.5.0</version.mockito>
+    <version.mockito>5.7.0</version.mockito>
     <version.picocli>4.7.5</version.picocli>
 
     <!-- plugins -->
@@ -170,6 +170,12 @@
 
     <dependency>
       <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>${version.commons-lang3}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
       <artifactId>commons-text</artifactId>
     </dependency>
 
@@ -250,6 +256,7 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
