--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.3</version>
+    <version>3.1.5</version>
   </parent>
 
   <groupId>de.gematik.pki.pkits</groupId>
   <artifactId>pki-testsuite</artifactId>
-  <version>2.2.0</version>
+  <version>2.3.0</version>
   <packaging>pom</packaging>
   <name>PKI Testsuite</name>
   <description>PKI Testsuite to test products of the telematic infrastructure to fulfill the gemSpec_PKI specification. This test suite is used for approval tests of different products like Intermediär, VSDM Fachdienst, VPNZugD, IDP FD, KIM-FD, etc.</description>
@@ -45,6 +45,7 @@
     <module>pkits-tsl-generator</module>
     <module>pkits-testsuite</module>
     <module>pkits-coverage-reports</module>
+    <module>pkits-distro-assembly</module>
   </modules>
 
   <scm>
@@ -86,22 +87,22 @@
     <version.ardikars.pcap>1.5.0</version.ardikars.pcap>
     <version.assertj-core>3.24.2</version.assertj-core>
     <version.awaitility>4.2.0</version.awaitility>
-    <version.bouncycastle>1.76</version.bouncycastle>
-    <version.commons-compress>1.24.0</version.commons-compress>
-    <version.commons-io>2.13.0</version.commons-io>
-    <version.commons-text>1.10.0</version.commons-text>
+    <version.bouncycastle>1.77</version.bouncycastle>
+    <version.commons-compress>1.25.0</version.commons-compress>
+    <version.commons-io>2.15.0</version.commons-io>
+    <version.commons-text>1.11.0</version.commons-text>
     <version.jfiglet>1.0.1</version.jfiglet>
-    <version.gemLibPki>1.3.0</version.gemLibPki>
-    <version.jackson>2.15.2</version.jackson>
+    <version.gemLibPki>2.0.2</version.gemLibPki>
+    <version.jackson>2.16.0</version.jackson>
     <version.jakarta.activation-api>2.1.2</version.jakarta.activation-api>
     <version.jakarta.validation-api>3.0.2</version.jakarta.validation-api>
     <version.jakarta.xml.bind-api>4.0.1</version.jakarta.xml.bind-api>
     <version.jaxb-api>2.4.0-b180830.0359</version.jaxb-api>
     <version.jaxb-impl>2.3.6</version.jaxb-impl>
-    <version.junit-jupiter>5.10.0</version.junit-jupiter>
-    <version.junit-platform-launcher>1.10.0</version.junit-platform-launcher>
-    <version.log4j2>2.20.0</version.log4j2>
-    <version.lombok>1.18.28</version.lombok>
+    <version.junit-jupiter>5.10.1</version.junit-jupiter>
+    <version.junit-platform-launcher>1.10.1</version.junit-platform-launcher>
+    <version.log4j2>2.21.1</version.log4j2>
+    <version.lombok>1.18.30</version.lombok>
     <version.openapi>2.2.0</version.openapi>
     <version.unirest-java>3.14.5</version.unirest-java>
     <version.xmlunit>2.9.1</version.xmlunit>
@@ -109,10 +110,10 @@
     <!--  plugins -->
     <version.dependency-check-maven>7.2.1</version.dependency-check-maven>
     <version.docker-maven-plugin>0.43.4</version.docker-maven-plugin>
-    <version.git-commit-id-maven-plugin>6.0.0</version.git-commit-id-maven-plugin>
-    <version.jacoco-maven-plugin>0.8.10</version.jacoco-maven-plugin>
+    <version.git-commit-id-maven-plugin>7.0.0</version.git-commit-id-maven-plugin>
+    <version.jacoco-maven-plugin>0.8.11</version.jacoco-maven-plugin>
     <version.maven-assembly-plugin>3.6.0</version.maven-assembly-plugin>
-    <version.maven-clean-plugin>3.3.1</version.maven-clean-plugin>
+    <version.maven-clean-plugin>3.3.2</version.maven-clean-plugin>
     <version.maven-compiler-plugin>3.11.0</version.maven-compiler-plugin>
     <version.maven-deploy-plugin>3.1.1</version.maven-deploy-plugin>
     <version.maven-enforcer-plugin>3.4.1</version.maven-enforcer-plugin>
@@ -121,9 +122,9 @@
     <version.maven-resources-plugin>3.3.0</version.maven-resources-plugin>
     <version.maven-site-plugin>3.12.1</version.maven-site-plugin>
     <version.maven-source-plugin>3.3.0</version.maven-source-plugin>
-    <version.maven-surefire-plugin>3.1.2</version.maven-surefire-plugin>
+    <version.maven-surefire-plugin>3.2.2</version.maven-surefire-plugin>
     <version.sonar-maven-plugin>3.10.0.2594</version.sonar-maven-plugin>
-    <version.spotless-maven-plugin>2.39.0</version.spotless-maven-plugin>
+    <version.spotless-maven-plugin>2.40.0</version.spotless-maven-plugin>
     <version.spotless.google-java-format>1.17.0</version.spotless.google-java-format>
 
     <!-- settings for upload to sonar server -->
@@ -144,11 +145,11 @@
         <version>${version.openapi}</version>
       </dependency>
 
-      <!-- NOTE check regularly : it is an upgraded version of dependency of xades4j->guice remove it when xades4j is upgraded -->
+      <!-- NOTE check regularly: it is an upgraded version of a dependency of xades4j->guice remove it when xades4j is upgraded -->
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>32.1.2-jre</version>
+        <version>32.1.3-jre</version>
       </dependency>
 
       <dependency>
@@ -367,6 +368,10 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>${version.maven-assembly-plugin}</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>${version.maven-clean-plugin}</version>
@@ -396,11 +401,6 @@
           <configuration>
             <skip>true</skip>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>${version.maven-assembly-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -611,6 +611,7 @@
           </markdown>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
@@ -628,43 +629,6 @@
         <skipUTs>true</skipUTs>
       </properties>
     </profile>
-
-    <profile>
-      <id>final-zip</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <properties>
-        <skipUTs>true</skipUTs>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <version>${version.maven-assembly-plugin}</version>
-            <executions>
-              <execution>
-                <id>make-assembly</id>
-                <goals>
-                  <goal>single</goal>
-                </goals>
-                <phase>package</phase>
-                <configuration>
-                  <skipAssembly>false</skipAssembly>
-                  <outputDirectory>./out</outputDirectory>
-                  <finalName>pki-testsuite-${project.version}</finalName>
-                  <appendAssemblyId>false</appendAssemblyId>
-                  <descriptors>
-                    <descriptor>assembly.xml</descriptor>
-                  </descriptors>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
   </profiles>
 
 </project>
