--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,17 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.5</version>
+    <version>3.2.0</version>
   </parent>
 
   <groupId>de.gematik.pki.pkits</groupId>
   <artifactId>pki-testsuite</artifactId>
-  <version>2.3.0</version>
+  <version>2.3.1</version>
   <packaging>pom</packaging>
   <name>PKI Testsuite</name>
-  <description>PKI Testsuite to test products of the telematic infrastructure to fulfill the gemSpec_PKI specification. This test suite is used for approval tests of different products like Intermediär, VSDM Fachdienst, VPNZugD, IDP FD, KIM-FD, etc.</description>
+  <description>PKI Testsuite to test products of the telematic infrastructure to fulfill the
+    gemSpec_PKI specification. This test suite is used for approval tests of different products like
+    Intermediär, VSDM Fachdienst, VPNZugD, IDP FD, KIM-FD, etc.</description>
   <url>https://github.com/gematik/app-PkiTestsuite</url>
 
   <organization>
@@ -64,8 +66,6 @@
     <snakeyaml.version>2.0</snakeyaml.version>
 
     <!-- header-->
-    <skipUTs>false</skipUTs>
-
     <skip.dockerbuild>true</skip.dockerbuild>
 
     <docker.registry.gematik>eu.gcr.io/gematik-all-infra-prod</docker.registry.gematik>
@@ -84,15 +84,15 @@
     <maven.compiler.encoding>${project.build.sourceEncoding}</maven.compiler.encoding>
 
     <!-- dependencies -->
-    <version.ardikars.pcap>1.5.0</version.ardikars.pcap>
+    <version.ardikars.pcap>1.5.1</version.ardikars.pcap>
     <version.assertj-core>3.24.2</version.assertj-core>
     <version.awaitility>4.2.0</version.awaitility>
     <version.bouncycastle>1.77</version.bouncycastle>
     <version.commons-compress>1.25.0</version.commons-compress>
-    <version.commons-io>2.15.0</version.commons-io>
+    <version.commons-io>2.15.1</version.commons-io>
     <version.commons-text>1.11.0</version.commons-text>
     <version.jfiglet>1.0.1</version.jfiglet>
-    <version.gemLibPki>2.0.2</version.gemLibPki>
+    <version.gemLibPki>2.0.3</version.gemLibPki>
     <version.jackson>2.16.0</version.jackson>
     <version.jakarta.activation-api>2.1.2</version.jakarta.activation-api>
     <version.jakarta.validation-api>3.0.2</version.jakarta.validation-api>
@@ -101,9 +101,9 @@
     <version.jaxb-impl>2.3.6</version.jaxb-impl>
     <version.junit-jupiter>5.10.1</version.junit-jupiter>
     <version.junit-platform-launcher>1.10.1</version.junit-platform-launcher>
-    <version.log4j2>2.21.1</version.log4j2>
+    <version.log4j2>2.22.0</version.log4j2>
     <version.lombok>1.18.30</version.lombok>
-    <version.openapi>2.2.0</version.openapi>
+    <version.openapi>2.3.0</version.openapi>
     <version.unirest-java>3.14.5</version.unirest-java>
     <version.xmlunit>2.9.1</version.xmlunit>
 
@@ -118,13 +118,13 @@
     <version.maven-deploy-plugin>3.1.1</version.maven-deploy-plugin>
     <version.maven-enforcer-plugin>3.4.1</version.maven-enforcer-plugin>
     <version.maven-failsafe-plugin>${version.maven-surefire-plugin}</version.maven-failsafe-plugin>
-    <version.maven-project-info-reports-plugin>3.4.5</version.maven-project-info-reports-plugin>
+    <version.maven-project-info-reports-plugin>3.5.0</version.maven-project-info-reports-plugin>
     <version.maven-resources-plugin>3.3.0</version.maven-resources-plugin>
     <version.maven-site-plugin>3.12.1</version.maven-site-plugin>
     <version.maven-source-plugin>3.3.0</version.maven-source-plugin>
-    <version.maven-surefire-plugin>3.2.2</version.maven-surefire-plugin>
+    <version.maven-surefire-plugin>3.2.3</version.maven-surefire-plugin>
     <version.sonar-maven-plugin>3.10.0.2594</version.sonar-maven-plugin>
-    <version.spotless-maven-plugin>2.40.0</version.spotless-maven-plugin>
+    <version.spotless-maven-plugin>2.41.1</version.spotless-maven-plugin>
     <version.spotless.google-java-format>1.17.0</version.spotless.google-java-format>
 
     <!-- settings for upload to sonar server -->
@@ -532,7 +532,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>${surefire.jacoco.args}</argLine>
-          <skipTests>${skipUTs}</skipTests>
         </configuration>
       </plugin>
 
@@ -618,17 +617,5 @@
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>approval-test</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <skipUTs>true</skipUTs>
-      </properties>
-    </profile>
-  </profiles>
 
 </project>
