--- a/pkits-ocsp-responder/pom.xml
+++ b/pkits-ocsp-responder/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>de.gematik.pki.pkits</groupId>
     <artifactId>pki-testsuite</artifactId>
-    <version>2.3.1</version>
+    <version>2.4.0</version>
   </parent>
 
   <artifactId>pkits-ocsp-responder</artifactId>
-  <version>2.3.1</version>
+  <version>2.4.0</version>
   <name>OCSP Responder Simulator</name>
   <description>Spring Boot OCSP Responder</description>
 
@@ -72,8 +72,8 @@
       <artifactId>unirest-java</artifactId>
     </dependency>
     <dependency>
-      <groupId>jakarta.validation</groupId>
-      <artifactId>jakarta.validation-api</artifactId>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
     </dependency>
   </dependencies>
 
