--- a/pkits-sut-server-sim/pom.xml
+++ b/pkits-sut-server-sim/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>de.gematik.pki.pkits</groupId>
     <artifactId>pki-testsuite</artifactId>
-    <version>2.3.1</version>
+    <version>2.4.0</version>
   </parent>
 
   <artifactId>pkits-sut-server-sim</artifactId>
-  <version>2.3.1</version>
+  <version>2.4.0</version>
   <name>Test Object Simulator (Server)</name>
   <description>Test object simulator (server)</description>
 
@@ -50,6 +50,10 @@
       <artifactId>pkits-common</artifactId>
     </dependency>
     <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
       <optional>true</optional>
@@ -85,14 +89,6 @@
     <dependency>
       <groupId>com.konghq</groupId>
       <artifactId>unirest-java</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.validation</groupId>
-      <artifactId>jakarta.validation-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.activation</groupId>
-      <artifactId>jakarta.activation-api</artifactId>
     </dependency>
   </dependencies>
 
