--- a/pkits-tsl-provider/pom.xml
+++ b/pkits-tsl-provider/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>de.gematik.pki.pkits</groupId>
     <artifactId>pki-testsuite</artifactId>
-    <version>2.3.1</version>
+    <version>2.4.0</version>
   </parent>
 
   <artifactId>pkits-tsl-provider</artifactId>
-  <version>2.3.1</version>
+  <version>2.4.0</version>
   <name>TSL Server Simulator</name>
   <description>Spring Boot TSL Provider</description>
 
@@ -75,6 +75,11 @@
       <groupId>com.konghq</groupId>
       <artifactId>unirest-java</artifactId>
     </dependency>
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
