--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.2</version>
+    <version>3.2.4</version>
   </parent>
 
   <groupId>de.gematik.pki.pkits</groupId>
   <artifactId>pki-testsuite</artifactId>
-  <version>2.4.2</version>
+  <version>2.5.0</version>
   <packaging>pom</packaging>
   <name>PKI Testsuite</name>
   <description>PKI Testsuite to test products of the telematic infrastructure to fulfill the
@@ -68,10 +68,10 @@
     <!-- header-->
     <skip.dockerbuild>true</skip.dockerbuild>
 
-    <docker.registry.gematik>eu.gcr.io/gematik-all-infra-prod</docker.registry.gematik>
-    <docker.image.name.pkits-ocsp-responder>${docker.registry.gematik}/pkits/pkits-ocsp-responder</docker.image.name.pkits-ocsp-responder>
-    <docker.image.name.pkits-tsl-provider>${docker.registry.gematik}/pkits/pkits-tsl-provider</docker.image.name.pkits-tsl-provider>
-    <docker.image.name.pkits-sut-server-sim>${docker.registry.gematik}/pkits/pkits-sut-server-sim</docker.image.name.pkits-sut-server-sim>
+    <docker.registry.gematik>local</docker.registry.gematik>
+    <docker.image.name.pkits-ocsp-responder>${docker.registry.gematik}/pki/pkits-ocsp-responder</docker.image.name.pkits-ocsp-responder>
+    <docker.image.name.pkits-tsl-provider>${docker.registry.gematik}/pki/pkits-tsl-provider</docker.image.name.pkits-tsl-provider>
+    <docker.image.name.pkits-sut-server-sim>${docker.registry.gematik}/pki/pkits-sut-server-sim</docker.image.name.pkits-sut-server-sim>
 
     <version.java>17</version.java>
     <version.maven>3.6.3</version.maven>
@@ -87,39 +87,39 @@
     <version.ardikars.pcap>1.5.1</version.ardikars.pcap>
     <version.assertj-core>3.25.3</version.assertj-core>
     <version.awaitility>4.2.0</version.awaitility>
-    <version.bouncycastle>1.77</version.bouncycastle>
-    <version.commons-compress>1.26.0</version.commons-compress>
-    <version.commons-io>2.15.1</version.commons-io>
-    <version.commons-text>1.11.0</version.commons-text>
+    <version.bouncycastle>1.78</version.bouncycastle>
+    <version.commons-compress>1.26.1</version.commons-compress>
+    <version.commons-io>2.16.1</version.commons-io>
+    <version.commons-text>1.12.0</version.commons-text>
     <version.jfiglet>1.0.1</version.jfiglet>
-    <version.gemLibPki>2.1.1</version.gemLibPki>
-    <version.jackson>2.16.1</version.jackson>
-    <version.jakarta.annotation-api>3.0.0-M1</version.jakarta.annotation-api>
+    <version.gemLibPki>2.1.3</version.gemLibPki>
+    <version.jackson>2.17.0</version.jackson>
+    <version.jakarta.annotation-api>3.0.0</version.jakarta.annotation-api>
     <version.junit-jupiter>5.10.2</version.junit-jupiter>
     <version.junit-platform-launcher>1.10.2</version.junit-platform-launcher>
-    <version.log4j2>2.22.1</version.log4j2>
-    <version.lombok>1.18.30</version.lombok>
-    <version.openapi>2.3.0</version.openapi>
+    <version.log4j2>2.23.1</version.log4j2>
+    <version.lombok>1.18.32</version.lombok>
+    <version.openapi>2.5.0</version.openapi>
     <version.unirest-java>3.14.5</version.unirest-java>
     <version.xmlunit>2.9.1</version.xmlunit>
 
     <!--  plugins -->
     <version.dependency-check-maven>7.2.1</version.dependency-check-maven>
     <version.docker-maven-plugin>0.44.0</version.docker-maven-plugin>
-    <version.git-commit-id-maven-plugin>7.0.0</version.git-commit-id-maven-plugin>
-    <version.jacoco-maven-plugin>0.8.11</version.jacoco-maven-plugin>
+    <version.git-commit-id-maven-plugin>8.0.2</version.git-commit-id-maven-plugin>
+    <version.jacoco-maven-plugin>0.8.12</version.jacoco-maven-plugin>
     <version.maven-assembly-plugin>3.6.0</version.maven-assembly-plugin>
     <version.maven-clean-plugin>3.3.2</version.maven-clean-plugin>
-    <version.maven-compiler-plugin>3.12.1</version.maven-compiler-plugin>
+    <version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
     <version.maven-deploy-plugin>3.1.1</version.maven-deploy-plugin>
     <version.maven-enforcer-plugin>3.4.1</version.maven-enforcer-plugin>
     <version.maven-failsafe-plugin>${version.maven-surefire-plugin}</version.maven-failsafe-plugin>
     <version.maven-project-info-reports-plugin>3.5.0</version.maven-project-info-reports-plugin>
     <version.maven-resources-plugin>3.3.0</version.maven-resources-plugin>
     <version.maven-site-plugin>3.12.1</version.maven-site-plugin>
-    <version.maven-source-plugin>3.3.0</version.maven-source-plugin>
+    <version.maven-source-plugin>3.3.1</version.maven-source-plugin>
     <version.maven-surefire-plugin>3.2.5</version.maven-surefire-plugin>
-    <version.sonar-maven-plugin>3.10.0.2594</version.sonar-maven-plugin>
+    <version.sonar-maven-plugin>3.11.0.3922</version.sonar-maven-plugin>
     <version.spotless-maven-plugin>2.43.0</version.spotless-maven-plugin>
     <version.spotless.google-java-format>1.17.0</version.spotless.google-java-format>
 
