--- a/pkits-sut-server-sim/pom.xml
+++ b/pkits-sut-server-sim/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>de.gematik.pki.pkits</groupId>
     <artifactId>pki-testsuite</artifactId>
-    <version>4.0.1</version>
+    <version>5.0.0</version>
   </parent>
 
   <artifactId>pkits-sut-server-sim</artifactId>
-  <version>4.0.1</version>
+  <version>5.0.0</version>
   <name>Test Object Simulator (Server)</name>
   <description>Test object simulator (server)</description>
 
@@ -32,6 +32,12 @@
     <dependency>
       <groupId>de.gematik.pki</groupId>
       <artifactId>gemLibPki</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${version.junit-jupiter}</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
