--- a/pkits-tsl-provider/pom.xml
+++ b/pkits-tsl-provider/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>de.gematik.pki.pkits</groupId>
     <artifactId>pki-testsuite</artifactId>
-    <version>4.0.1</version>
+    <version>5.0.0</version>
   </parent>
 
   <artifactId>pkits-tsl-provider</artifactId>
-  <version>4.0.1</version>
+  <version>5.0.0</version>
   <name>TSL Server Simulator</name>
   <description>Spring Boot TSL Provider</description>
 
@@ -25,6 +25,12 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${version.junit-jupiter}</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
