--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.2</version>
+    <version>3.3.4</version>
   </parent>
 
   <groupId>de.gematik.pki.pkits</groupId>
   <artifactId>pki-testsuite</artifactId>
-  <version>4.0.1</version>
+  <version>5.0.0</version>
   <packaging>pom</packaging>
   <name>PKI Testsuite</name>
   <description>PKI Testsuite to test products of the telematic infrastructure to fulfill the
@@ -73,10 +73,8 @@
     <docker.image.name.pkits-tsl-provider>${docker.registry.gematik}/pki/pkits-tsl-provider</docker.image.name.pkits-tsl-provider>
     <docker.image.name.pkits-sut-server-sim>${docker.registry.gematik}/pki/pkits-sut-server-sim</docker.image.name.pkits-sut-server-sim>
 
-    <version.java>17</version.java>
+    <java.version>17</java.version>
     <version.maven>3.6.3</version.maven>
-    <!-- for Spring boot -->
-    <java.version>${version.java}</java.version>
 
     <project.build.releaseJarsDir>${project.basedir}/../bin/</project.build.releaseJarsDir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -87,16 +85,16 @@
     <version.ardikars.pcap>1.5.1</version.ardikars.pcap>
     <version.assertj-core>3.26.3</version.assertj-core>
     <version.bouncycastle>1.78.1</version.bouncycastle>
-    <version.commons-compress>1.27.0</version.commons-compress>
-    <version.commons-io>2.16.1</version.commons-io>
+    <version.commons-compress>1.27.1</version.commons-compress>
+    <version.commons-io>2.17.0</version.commons-io>
     <version.commons-text>1.12.0</version.commons-text>
     <version.jfiglet>1.0.1</version.jfiglet>
-    <version.gemLibPki>2.1.7</version.gemLibPki>
-    <version.jackson>2.17.2</version.jackson>
+    <version.gemLibPki>2.1.8</version.gemLibPki>
+    <version.jackson>2.18.0</version.jackson>
     <version.jakarta.annotation-api>3.0.0</version.jakarta.annotation-api>
-    <version.junit-jupiter>5.10.3</version.junit-jupiter>
-    <version.junit-platform-launcher>1.10.3</version.junit-platform-launcher>
-    <version.log4j2>2.23.1</version.log4j2>
+    <version.junit-jupiter>5.11.1</version.junit-jupiter>
+    <version.junit-platform-launcher>1.11.1</version.junit-platform-launcher>
+    <version.log4j2>2.24.1</version.log4j2>
     <version.lombok>1.18.34</version.lombok>
     <version.openapi>2.6.0</version.openapi>
     <version.unirest-java>4.4.4</version.unirest-java>
@@ -104,20 +102,20 @@
 
     <!--  plugins -->
     <version.dependency-check-maven>7.2.1</version.dependency-check-maven>
-    <version.docker-maven-plugin>0.45.0</version.docker-maven-plugin>
+    <version.docker-maven-plugin>0.45.1</version.docker-maven-plugin>
     <version.git-commit-id-maven-plugin>9.0.1</version.git-commit-id-maven-plugin>
     <version.jacoco-maven-plugin>0.8.12</version.jacoco-maven-plugin>
     <version.maven-assembly-plugin>3.6.0</version.maven-assembly-plugin>
     <version.maven-clean-plugin>3.4.0</version.maven-clean-plugin>
     <version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
-    <version.maven-deploy-plugin>3.1.2</version.maven-deploy-plugin>
+    <version.maven-deploy-plugin>3.1.3</version.maven-deploy-plugin>
     <version.maven-enforcer-plugin>3.5.0</version.maven-enforcer-plugin>
     <version.maven-failsafe-plugin>${version.maven-surefire-plugin}</version.maven-failsafe-plugin>
-    <version.maven-project-info-reports-plugin>3.6.2</version.maven-project-info-reports-plugin>
+    <version.maven-project-info-reports-plugin>3.7.0</version.maven-project-info-reports-plugin>
     <version.maven-resources-plugin>3.3.0</version.maven-resources-plugin>
     <version.maven-site-plugin>3.20.0</version.maven-site-plugin>
     <version.maven-source-plugin>3.3.1</version.maven-source-plugin>
-    <version.maven-surefire-plugin>3.4.0</version.maven-surefire-plugin>
+    <version.maven-surefire-plugin>3.5.0</version.maven-surefire-plugin>
     <version.sonar-maven-plugin>4.0.0.4121</version.sonar-maven-plugin>
     <version.spotless-maven-plugin>2.43.0</version.spotless-maven-plugin>
     <version.spotless.google-java-format>1.17.0</version.spotless.google-java-format>
@@ -445,8 +443,8 @@
         <version>${version.maven-compiler-plugin}</version>
         <configuration>
           <encoding>${project.build.sourceEncoding}</encoding>
-          <source>${version.java}</source>
-          <target>${version.java}</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
           <debug>true</debug>
         </configuration>
       </plugin>
@@ -467,7 +465,7 @@
                   <version>${version.maven}</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <version>${version.java}</version>
+                  <version>[${java.version},17.99.99]</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
