--- a/pkits-testsuite/src/main/resources/all_pkits_parameters_unitTest.yml
+++ b/pkits-testsuite/src/main/resources/all_pkits_parameters_unitTest.yml
@@ -8,6 +8,8 @@ testObject:
   tslProcessingTimeSeconds: -200
   ocspProcessingTimeSeconds: -250
   ocspGracePeriodSeconds: -300
+  ocspToleranceProducedAtPastSeconds: -100
+  ocspToleranceProducedAtFutureSeconds: -100
   ocspTimeoutSeconds: -400
   scriptUseCase:
     scriptPath: "testObject.scriptUseCase.scriptPath"
