--- a/docs/configs/inttest/pkits.yml
+++ b/docs/configs/inttest/pkits.yml
@@ -3,7 +3,9 @@ testObject:
   testObjectType: "IntermediaerServer" # one of (IntermediaerServer, KimFachdienst, VsdmFachdienst, VpnKonzentrator, VpnRegServer, IdpFachdienst, IdpEgkFachdienst)
   ipAddressOrFqdn: "127.0.0.1"
   port: 8443
-  ocspGracePeriodSeconds: 0
+  ocspGracePeriodSeconds: 3
+  ocspToleranceProducedAtPastSeconds: 10
+  ocspToleranceProducedAtFutureSeconds: 20
   tslDownloadIntervalSeconds: 2
   tslProcessingTimeSeconds: 3
 
