--- a/docs/configs/inttest/pkits_script.yml
+++ b/docs/configs/inttest/pkits_script.yml
@@ -2,6 +2,8 @@ testObject:
   name: "Server 0815"
   testObjectType: "IdpFachdienst"
   ocspGracePeriodSeconds: 0
+  ocspToleranceProducedAtPastSeconds: 10
+  ocspToleranceProducedAtFutureSeconds: 20
   tslDownloadIntervalSeconds: 5
   tslProcessingTimeSeconds: 3
   scriptUseCase:
