--- a/docs/configs/inttest/pkits_skip_initial_state.yml
+++ b/docs/configs/inttest/pkits_skip_initial_state.yml
@@ -4,6 +4,8 @@ testObject:
   ipAddressOrFqdn: "127.0.0.1"
   port: 8443
   ocspGracePeriodSeconds: 0
+  ocspToleranceProducedAtPastSeconds: 10
+  ocspToleranceProducedAtFutureSeconds: 20
   tslDownloadIntervalSeconds: 2
   tslProcessingTimeSeconds: 3
 
