--- a/pkits-testsuite/src/main/resources/all_pkits_parameters_unitTest.yml
+++ b/pkits-testsuite/src/main/resources/all_pkits_parameters_unitTest.yml
@@ -41,6 +41,7 @@ ocspResponder:
   appPath: "ocspResponder.appPath"
 
 tslProvider:
+  tslCryptTypeEccOnly: false
   ipAddressOrFqdn: "tslProvider.ipAddressOrFqdn"
   port: -2000
   id: "tslProvider.id"
@@ -48,8 +49,6 @@ tslProvider:
 
 testSuiteParameter:
   performInitialState: false
-  captureNetworkTraffic: true
-  captureInterfaces: "testSuiteParameter.captureInterfaces"
 
   ocspSettings:
     timeoutDeltaMilliseconds: -3000
