--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.5</version>
+    <version>3.4.0</version>
   </parent>
 
   <groupId>de.gematik.pki.pkits</groupId>
   <artifactId>pki-testsuite</artifactId>
-  <version>5.1.0</version>
+  <version>5.2.0</version>
   <packaging>pom</packaging>
   <name>PKI Testsuite</name>
   <description>PKI Testsuite to test products of the telematic infrastructure to fulfill the
@@ -82,21 +82,21 @@
     <maven.compiler.encoding>${project.build.sourceEncoding}</maven.compiler.encoding>
 
     <!-- dependencies -->
-    <version.ardikars.pcap>1.5.1</version.ardikars.pcap>
     <version.assertj-core>3.26.3</version.assertj-core>
     <version.bouncycastle>1.79</version.bouncycastle>
     <version.commons-compress>1.27.1</version.commons-compress>
-    <version.commons-io>2.17.0</version.commons-io>
+    <version.commons-io>2.18.0</version.commons-io>
     <version.commons-text>1.12.0</version.commons-text>
     <version.jfiglet>1.0.1</version.jfiglet>
-    <version.jackson>2.18.1</version.jackson>
-    <version.gemLibPki>3.0.0</version.gemLibPki>
+    <version.jackson>2.18.2</version.jackson>
+    <version.gemLibPki>3.0.1</version.gemLibPki>
+    <version.httpcore5>5.3.1</version.httpcore5>
     <version.jakarta.annotation-api>3.0.0</version.jakarta.annotation-api>
     <version.junit-jupiter>5.11.3</version.junit-jupiter>
     <version.junit-platform-launcher>1.11.3</version.junit-platform-launcher>
-    <version.log4j2>2.24.1</version.log4j2>
-    <version.lombok>1.18.34</version.lombok>
-    <version.openapi>2.6.0</version.openapi>
+    <version.log4j2>2.24.2</version.log4j2>
+    <version.lombok>1.18.36</version.lombok>
+    <version.openapi>2.7.0</version.openapi>
     <version.unirest-java>4.4.5</version.unirest-java>
     <version.xmlunit>2.10.0</version.xmlunit>
 
@@ -165,7 +165,11 @@
         <artifactId>gemLibPki</artifactId>
         <version>${version.gemLibPki}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.apache.httpcomponents.core5</groupId>
+        <artifactId>httpcore5</artifactId>
+        <version>${version.httpcore5}</version>
+      </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
@@ -305,14 +309,6 @@
         <groupId>com.konghq</groupId>
         <artifactId>unirest-java-core</artifactId>
         <version>${version.unirest-java}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.ardikars.pcap</groupId>
-        <artifactId>pcap</artifactId>
-        <version>${version.ardikars.pcap}</version>
-        <type>pom</type>
-        <scope>import</scope>
       </dependency>
 
       <dependency>
